--- a/client/containers/Project/Interface/InterfaceCol/InterfaceColMenu.scss
+++ b/client/containers/Project/Interface/InterfaceCol/InterfaceColMenu.scss
@@ -131,8 +131,8 @@
     max-width: 90px;
   }
   .component-label-wrapper {
-    margin-top: '-10px';
-    margin-bottom: '15px';
+    margin-top: -10px;
+    margin-bottom: 15px;
   }
 }
 
