fix: 修复保存按钮样式bug

--- a/client/containers/Project/Interface/InterfaceList/Edit.scss
+++ b/client/containers/Project/Interface/InterfaceList/Edit.scss
@@ -50,13 +50,13 @@
      z-index: 999;
   }
   .interface-edit-submit-button{
-      background-color: #32325d;
+      background-color: #1d1d3d;
       color: #fff;
   }
 
   .interface-edit-submit-button:hover{
-    color: #32325d;
-    border-color: #32325d;
+    border-color: #434370;
+    background-color: #434370;
   }
 }
 
