fix: g截断， mock信息select，json5提示

--- a/client/containers/Project/Interface/InterfaceList/Edit.scss
+++ b/client/containers/Project/Interface/InterfaceList/Edit.scss
@@ -77,7 +77,8 @@
     text-overflow:ellipsis;
     white-space: nowrap;
     padding-right: 24px;
-    line-height: 100%;
+    // line-height: 100%;
+    vertical-align: middle;
   }
 
   .opened {
