fix: 开启 json5 提示信息

--- a/client/containers/Project/Interface/interface.scss
+++ b/client/containers/Project/Interface/interface.scss
@@ -197,6 +197,10 @@
     margin-bottom: .16rem;
     border-left: 3px solid #2395f1;
     padding-left: 8px;
+    .tooltip {
+      font-size: 13px;
+      font-weight: normal;
+    }
   }
   .container-radiogroup {
     text-align: center;
