feat(footer): hide footer

--- a/client/styles/common.scss
+++ b/client/styles/common.scss
@@ -78,7 +78,7 @@ em {
   background-color: #eceef1;
   &::after {
     content: '';
-    display: block;
+    display: none;
     height: 2.4rem;
   }
 }
