feat(webhook): webhook UI 支持显示 active 状态 和 error 错误信息

--- a/exts/yapi-plugin-webhook/component/index.less
+++ b/exts/yapi-plugin-webhook/component/index.less
@@ -20,8 +20,16 @@
   }
 
   .expand-row {
-    table > tr > td {
+    table tr > td {
       padding-bottom: 16px;
+      position: relative;
+
+      // code
+      pre {
+        overflow-x: auto;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+      }
     }
   }
 
