chore(webhook): little style

--- a/exts/yapi-plugin-webhook/component/index.less
+++ b/exts/yapi-plugin-webhook/component/index.less
@@ -16,6 +16,10 @@
     .action {
       margin-right: 6px;
       white-space: nowrap;
+
+      &.delete {
+        color: red;
+      }
     }
   }
 
